# BoomBaby

./: .gitignore  AGENT.md  CMakeLists.txt  LICENSE.md  Makefile  README.md  sonar-project.properties
.github/workflows/: create-pr.yml  quality-check.yml  release.yml  sonarqube.yml
Resources/factory_presets/: default_state.xml  junglist_state.xml  sub_osc_only_state.xml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/DSP/: ChannelState.h  ClickEngine.cpp  ClickEngine.h  DirectEngine.cpp  DirectEngine.h  EnvelopeData.h  EnvelopeLutManager.h  SamplePlayer.cpp  SamplePlayer.h  SubEngine.cpp  SubEngine.h  SubOscillator.cpp  SubOscillator.h  TransientDetector.h
Source/GUI/: ClickParams.cpp  ClickShapeEditor.cpp  ClickShapeEditor.h  ClickXYPad.cpp  ClickXYPad.h  CustomSliderLAF.h  DirectParams.cpp  EnvelopeCurveEditor.cpp  EnvelopeCurveEditor.h  InfoBoxText.h  KeyboardComponent.cpp  KeyboardComponent.h  LutBaker.h  MasterFader.cpp  MasterFader.h  PanelComponent.cpp  PanelComponent.h  PresetBar.h  SampleChooserUtils.h  SubParamKnobs.cpp  SubParams.cpp  UIConstants.h  WaveformDisplay.cpp  WaveformUtils.h
Tests/: TestClickEngine.cpp  TestDirectEngine.cpp  TestLevelDetector.cpp  TestSamplePlayer.cpp  TestSaturator.cpp  TestSubEngine.cpp
docs/: compatibility.md
